{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 55,
  "lineage": "b675fa4a-1cd2-a954-3b90-116151d4897d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:loadbalancer/app/alb-ecs/627b64adf3c93187",
            "arn_suffix": "app/alb-ecs/627b64adf3c93187",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-ecs-2124472045.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:loadbalancer/app/alb-ecs/627b64adf3c93187",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-ecs",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07f211fbc16ce4156"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f8428e5efa460af"
              },
              {
                "subnet_id": "subnet-09896dd61f9fb170a"
              }
            ],
            "subnets": [
              "subnet-02f8428e5efa460af",
              "subnet-09896dd61f9fb170a"
            ],
            "vpc_id": "vpc-07b77778eb1d58bd1",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:listener/app/alb-ecs/627b64adf3c93187/eaa44407ae7aa5a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:targetgroup/main-tg/7ee5487f87311a98",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:listener/app/alb-ecs/627b64adf3c93187/eaa44407ae7aa5a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:loadbalancer/app/alb-ecs/627b64adf3c93187",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.main_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:targetgroup/api-tg/07202032c3037097",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:listener-rule/app/alb-ecs/627b64adf3c93187/eaa44407ae7aa5a1/3dfd2dcb4a26e741",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "api.semen.bootcamp.vok-works.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:listener-rule/app/alb-ecs/627b64adf3c93187/eaa44407ae7aa5a1/3dfd2dcb4a26e741",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:listener/app/alb-ecs/627b64adf3c93187/eaa44407ae7aa5a1",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.alb_listener",
            "aws_lb_target_group.api_tg",
            "aws_lb_target_group.main_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "web_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:targetgroup/web-tg/1d337223eb30a60b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:listener-rule/app/alb-ecs/627b64adf3c93187/eaa44407ae7aa5a1/41a385214da4ad4c",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "web.semen.bootcamp.vok-works.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:listener-rule/app/alb-ecs/627b64adf3c93187/eaa44407ae7aa5a1/41a385214da4ad4c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:listener/app/alb-ecs/627b64adf3c93187/eaa44407ae7aa5a1",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.alb_listener",
            "aws_lb_target_group.main_tg",
            "aws_lb_target_group.web_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:targetgroup/api-tg/07202032c3037097",
            "arn_suffix": "targetgroup/api-tg/07202032c3037097",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "404",
                "path": "/health",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:targetgroup/api-tg/07202032c3037097",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07b77778eb1d58bd1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:targetgroup/main-tg/7ee5487f87311a98",
            "arn_suffix": "targetgroup/main-tg/7ee5487f87311a98",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:targetgroup/main-tg/7ee5487f87311a98",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "main-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07b77778eb1d58bd1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:targetgroup/web-tg/1d337223eb30a60b",
            "arn_suffix": "targetgroup/web-tg/1d337223eb30a60b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:582963707088:targetgroup/web-tg/1d337223eb30a60b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07b77778eb1d58bd1"
          }
        }
      ]
    }
  ]
}